src/objects/Test__c.object
<CustomObject>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Test</relationshipLabel>
        <relationshipName>Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>group__c</fullName>
        <label>group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Test_share__c</fullName>
        <label>Test__share</label>
    </sharingReasons>
</CustomObject>